Fix minor nits found by AK

--- a/tip/160.md
+++ b/tip/160.md
@@ -84,7 +84,7 @@ I propose supporting these operation modes within Tcl through a single
 new option to the **fconfigure** command \(to definitely be implemented
 on Unix serial channels — because that is the type of stdin in a
 normal interactive session — and suitably on other platforms if
-possible\): **-inputmode**.  This will have three legal values:
+possible\): **-inputmode**.  This will have four legal values:
 
  * **normal**: This will turn on both echoing and cooking of input, and can be
    considered to be the default configuration for all terminals.
