--- a/tip/507.md
+++ b/tip/507.md
@@ -24,7 +24,7 @@ The response to this challenge in general (on the web, in applications, etc.)
 has been to adopt the [SVG][] format, as that is scalable and does not
 typically depend on being rendered at a particular resolution.
 Moreover, there is already a Tk image extension to do the conversion,
-[tksvg][]. The implementation is using the [nanosvg][] library It has no other
+[tksvg][]. The implementation is using the [nanosvg][] library. It has no other
 external dependencies and is only 2 header files.
 
 [nanosvg][] was choosen because it:
@@ -51,7 +51,7 @@ The **svg** image format has the following format suboptions:
 
  > **svg** **-dpi** _dpiValue_ **-scale** _scaleValue_ **-unit** _unitValue_
 
-*dpiValue* is used in conversion between given coordiantes and screen resolution. The value must be greater then 0.0. The default value is `96`.
+*dpiValue* is used in conversion between given coordinates and screen resolution. The value must be greater then 0.0. The default value is `96`.
 
 *scaleValue* is used to scale the resulting image. The value must be greater then 0.0. The default value is `1.0`.
 
