TIP vote results recorded

--- a/tip/160.md
+++ b/tip/160.md
@@ -1,12 +1,15 @@
 # TIP 160: Improvements to Terminal and Serial Channel Handling
-	State:          Draft
+	State:          Accepted
 	Type:           Project
 	Tcl-Version:    8.7
-	Vote:           In progress
+	Vote:           Done
 	Post-History:	
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	Created:        17-Oct-2003
 	Tcl-Branch:     tip-160
+	Votes-For:      DKF, JN, SL, AK
+	Votes-Against:  none
+	Votes-Present:  FV 
 -----
 
 # Abstract
