--- a/tip/224.md
+++ b/tip/224.md
@@ -2,13 +2,20 @@
 	Author:         Peter MacDonald <peter@pdqi.com>
 	Author:         Robert Seeger <rseeger00@aol.com>
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Draft
+	State:          Rejected
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        28-Sep-2004
 	Post-History:   
 	Tcl-Version:    8.7
 	Tcl-Branch:     tip-224
+	Votes-For:      DKF, JN, SL
+	Votes-Against:  DGP, AK
+	Votes-Present:  FV
+	Rejection-Reason:
+		Tcl 8.7 already has a new [array default] command from TIP 508. It
+		does not appear to interact with the proposed [array value] in a
+		sensible way.
 -----
 
 # Abstract
