--- a/tip/312.md
+++ b/tip/312.md
@@ -1,14 +1,17 @@
 # TIP 312: Add More Link Types
 	Author:         Rene Zaumseil <r.zaumseil@freenet.de>
 	Author:         Larry W. Virden <lvirden@yahoo.com>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        26-Jan-2008
 	Post-History:   
 	Keywords:       variable,trace
 	Tcl-Version:    8.7
-	Tcl-Ticket:     1992824
+	Tcl-Branch:     tip-312-new
+	Votes-For:      DKF, JN, SL, AK
+	Votes-Against:  none
+	Votes-Present:  DGP, FV
 -----
 
 # Abstract
