--- a/tip/342.md
+++ b/tip/342.md
@@ -1,13 +1,16 @@
 # TIP 342: Dict Get With Default
 	Author:		Lars Hellström <Lars.Hellstrom@residenset.net>
-	State:		Draft
+	State:		Accepted
 	Type:		Project
-	Vote:		In progress
+	Vote:		Done
 	Tcl-Version:	8.7
 	Created:	27-Nov-2008
 	Keywords:	dictionary, default value
 	Post-History:	
 	Tcl-Branch:     tip-342
+	Votes-For:      DKF, JN, DGP, SL, AK
+	Votes-Against:  none
+	Votes-Present:  FV
 -----
 
 # Abstract
