--- a/tip/504.md
+++ b/tip/504.md
@@ -1,14 +1,17 @@
 # TIP 504: New subcommand [string insert]
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        21-Mar-2018
 	Obsoletes:	475
 	Post-History:   
 	Keywords:	Tcl,string,insert
 	Tcl-Version:	8.7
 	Tcl-Branch:     dgp-string-insert
+	Votes-For:      DKF, JN, DGP, FV, SL, AK
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 
 # Abstract
