--- a/tip/507.md
+++ b/tip/507.md
@@ -1,13 +1,16 @@
 # TIP 507: Include simple SVG support with nanosvg
 	Author:         René Zaumseil <r.zaumseil@freenet.de>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        9-May-2018
 	Post-History:   
 	Keywords:       Tk
 	Tcl-Version:    8.7
 	Tk-Branch:      tip-507
+	Votes-For:      DKF, JN, FV, SL, AK
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 
 # Abstract
