--- a/tip/164.md
+++ b/tip/164.md
@@ -2,14 +2,17 @@
 	Author:         Arjen Markus <arjen.markus@wldelft.nl>
 	Author:         Dimitrios Zachariadis <dzach@hol.gr>
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        17-Nov-2003
 	Post-History:   
 	Keywords:       Tk,canvas
 	Tcl-Version:    8.7
 	Tk-Branch:      tip-164
+	Votes-For:      DKF, JN, FV, SL, AK
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 
 # Abstract
