Mark TIPs as Final

--- a/tip/160.md
+++ b/tip/160.md
@@ -1,5 +1,5 @@
 # TIP 160: Improvements to Terminal and Serial Channel Handling
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Tcl-Version:    8.7
 	Vote:           Done
