--- a/tip/312.md
+++ b/tip/312.md
@@ -1,7 +1,7 @@
 # TIP 312: Add More Link Types
 	Author:         Rene Zaumseil <r.zaumseil@freenet.de>
 	Author:         Larry W. Virden <lvirden@yahoo.com>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        26-Jan-2008
