--- a/tip/367.md
+++ b/tip/367.md
@@ -1,5 +1,5 @@
 # TIP 367: A Command to Remove Elements from a List
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Tcl-Version:    8.7
 	Vote:           Done
