--- a/tip/504.md
+++ b/tip/504.md
@@ -1,6 +1,6 @@
 # TIP 504: New subcommand [string insert]
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        21-Mar-2018
