Mark TIPs as Final

--- a/tip/164.md
+++ b/tip/164.md
@@ -2,7 +2,7 @@
 	Author:         Arjen Markus <arjen.markus@wldelft.nl>
 	Author:         Dimitrios Zachariadis <dzach@hol.gr>
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        17-Nov-2003
