--- a/tip/483.md
+++ b/tip/483.md
@@ -1,6 +1,6 @@
 # TIP 483: Improved TIP #59 implementation for Tk
 	Author:         Stuart Cassoff <stwo@users.sourceforge.net>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        03-Nov-2017
