--- a/tip/507.md
+++ b/tip/507.md
@@ -1,6 +1,6 @@
 # TIP 507: Include simple SVG support with nanosvg
 	Author:         René Zaumseil <r.zaumseil@freenet.de>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        9-May-2018
