--- a/tip/482.md
+++ b/tip/482.md
@@ -1,6 +1,6 @@
 # TIP 482: Record Tk demo directory information
 	Author:         Stuart Cassoff <stwo@users.sourceforge.net>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        03-Nov-2017
