Work around a bug in the fossil markdown renderer

--- a/tip/539.md
+++ b/tip/539.md
@@ -39,20 +39,20 @@ pattern is used (notably **glob**, **namespace export**, and
 **switch**), it is possible to give several such patterns and have it 
 interpreted as the union of the patterns. Were that the case with 
 **dict filter**, the "`-foo`, `-bar`, and `-baz`" problem could be solved as 
-easily as
+easily as:
 
-    dict filter $opts key -foo -bar -baz
+      dict filter $opts key -foo -bar -baz
 
-which is comparable to
+which is comparable to:
 
-    dict remove $opts -foo -bar -baz
-    dict replace $opts -foo 1 -bar off -baz 42
+      dict remove $opts -foo -bar -baz
+      dict replace $opts -foo 1 -bar off -baz 42
 
-and much nicer than the **script** counterpart
+and much nicer than the **script** counterpart:
 
-    dict filter $opts script {key val} {
-        ::tcl::mathop::in $key {-foo -bar -baz}
-    }
+      dict filter $opts script {key val} {
+          ::tcl::mathop::in $key {-foo -bar -baz}
+      }
 
 If the **key** form is generalised like this, then it seems appropriate 
 to also generalise the **value** form in the same way to keep the 
@@ -88,16 +88,18 @@ seemed more appropriate.
 An alternative to allowing multiple patterns with **dict filter** could 
 be to allow a regular expression pattern, since the union of two regular 
 languages is again a regular language. Any syntax that could be picked for 
-that would however on one hand already be rather close to
+that would however on one hand already be rather close to:
 
-    dict filter $opts script {key val} {regexp $RE $key}
+      dict filter $opts script {key val} {regexp $RE $key}
 
 and on the other it would be rather difficult to read, as the regular 
-expression corresponding to "`-foo` or `-bar` or `-baz`" is
+expression corresponding to "`-foo` or `-bar` or `-baz`" is:
 
-    ^(-foo|-bar|-baz)$
+      ^(-foo|-bar|-baz)$
 
-which it is tempting but incorrect to simplify to `-foo|-bar|-baz`.
+which it is tempting but incorrect to simplify to:
+
+      -foo|-bar|-baz
 
 # Implementation Notes
 
@@ -122,13 +124,13 @@ Indeed, a **dict filter** … **key** that reorders keys according to
 its pattern arguments could sometimes be useful in interactive situations, 
 as a way of getting selected keys up from in a dictionary:
 
-    set D {-baz 0 -bar 1 -foo 2}
-    dict filter $D key -foo -bar *
+      set D {-baz 0 -bar 1 -foo 2}
+      dict filter $D key -foo -bar *
 
 On the other hand, this effect can mostly be obtained through use of 
 **dict merge** already:
 
-    dict merge {-foo x -bar x} $D
+      dict merge {-foo x -bar x} $D
 
 # Copyright
 
