TIP 342 is Final

--- a/tip/342.md
+++ b/tip/342.md
@@ -1,6 +1,6 @@
 # TIP 342: Dict Get With Default
 	Author:		Lars Hellström <Lars.Hellstrom@residenset.net>
-	State:		Accepted
+	State:		Final
 	Type:		Project
 	Vote:		Done
 	Tcl-Version:	8.7
@@ -24,8 +24,7 @@ The **dict** command will get a new subcommand
 
  > **dict getwithdefault** _dictionary_ _key_ ?_key_ ...?  _value_
 
-\(I consider the name of this subcommand very much open for discussion\) which
-modulo error messages behaves like
+which, modulo error messages, behaves like
 
 	 proc dict_getwithdefault {D args} {
 	     if {[dict exists $D {*}[lrange $args 0 end-1]]} then {
@@ -41,6 +40,8 @@ sequence of _key_s if it exists, or the default _value_ otherwise. As with
 returned\) if one of the _key_s is missing from its dictionary, but an error
 is thrown if this path of keys cannot be traversed because the value
 associated with the previous key is not a dictionary.
+
+To facilitate easy use by lazy programmers, it will be aliased as **dict getdef**.
 
 # Rationale
 
@@ -151,7 +152,19 @@ code needed to do it in the core.
 
 An implementation is provided, in [patch #2370575](https://core.tcl-lang.org/tcl/tktview/2370575).
 
+# Alternate Names
+
+The following alternate names were considered for **getwithdefault** during
+the TIP voting period:
+
+ * **getdef** — selected.
+ * **default** — feels like it should address the topics of defaults more widely.
+ * **fetch** — consensus is that this should be a command with a different
+   return signature if/when such is created (e.g., a boolean to say whether
+   the value was found).
+ * **get?** — rejected as Tcl's own commands (mostly) do not use non-alpha
+   characters in their names, leaving more space for user code.
+
 # Copyright
 
 This document has been placed in the public domain. 
-
