Fix formatting in 411

--- a/tip/411.md
+++ b/tip/411.md
@@ -47,7 +47,7 @@ about. This operation will always fail in a safe interpreter. The result of
 the new **chan info** command would be a dictionary with following keys
 always present:
 
- type: indicating a type of channel. Possible values are "**file**",
+ **type**: indicating a type of channel. Possible values are "**file**",
    "**socket**", "**process**" \(result of [**open** "\|..."]\), empty
    string \(in case of channel that doesn't support this information\), or any
    custom type, depending of refchan implementations. This is a mandatory key.
@@ -56,29 +56,29 @@ The remainder of the keys are optional and depend on the type.
 
 For **file** channels, the dictionary shall include these:
 
- path: full, normalized path to the file, including the file name.
+ **path**: full, normalized path to the file, including the file name.
 
- new: boolean value indicating whether file already existed while opening, or
+ **new**: boolean value indicating whether file already existed while opening, or
    it was created.
 
 For **socket** channels, the dictionary shall include these:
 
- host: peer hostname, or local hostname for listening socket. This is
+ **host**: peer hostname, or local hostname for listening socket. This is
    partially equivalent to getting the first value returned by [**chan
    configure** _channelId_ **-peername**] for connected sockets.
 
- port: peer port, or listening port \(for listening socket\). This is partially
+ **port**: peer port, or listening port \(for listening socket\). This is partially
    equivalent to getting the third value returned by [**chan configure**
    _channelId_ **-peername**] for connected sockets.
 
- side: one of the
+ **side**: one of the
  following: "**client**", "**accepted**", or "**listening**".
 
 For **process** channels, the dictionary shall include these:
 
- cmdline: copy of the command passed to **open**.
+ **cmdline**: copy of the command passed to **open**.
 
- pid: PID of a spawned process, as produced by **pid**.
+ **pid**: PID of a spawned process, as produced by **pid**.
 
 Any key could be produced by other channel types, notably including reflected channels.
 
@@ -100,11 +100,11 @@ the same as if the operation returned an empty dictionary.
 # Internals
 
 Channel structure in Tcl core would require another API level indicating
-channels that have a function returning an "info" dict. All core channels are
-expected to migrate to this level, although it's possible to stay at current
-API version - it will just cause the **type** in **chan info** dict to be
-the _typeName_ field of the channel's _Tcl\_ChannelType_ structure, with no
-additional keys in the dict.
+channels that have a function returning an "info" dictionary. All core
+channels are expected to migrate to this level, although it's possible to stay
+at current API version - it will just cause the **type** in **chan info** dict
+to be the _typeName_ field of the channel's _Tcl\_ChannelType_ structure, with
+no additional keys in the dict.
 
 # Examples
 
