Updated TIP 383. Got a real implementation now.

--- a/tip/383.md
+++ b/tip/383.md
@@ -1,6 +1,7 @@
 # TIP 383: Injecting Code into Suspended Coroutines
 	Author:         Alexandre Ferrieux <alexandre.ferrieux@gmail.com>
 	Author:         Miguel Sofer <msofer@users.sourceforge.net>
+	Author:         Donal K. Fellows <dkf@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
 	Vote:           Pending
@@ -8,33 +9,36 @@
 	Post-History:   
 	Keywords:       debugging,coroutine,yielded
 	Tcl-Version:    8.7
+	Tcl-Branch:     tip-383
 -----
 
 # Abstract
 
-This proposes a new command, **coroinject**, that allows a programmer to
-inject arbitrary code into a suspended coroutine, for execution on next
-resumption.
+This proposes two new commands. One, **coroinject**, that allows a programmer
+to inject arbitrary code into a suspended coroutine, for execution on next
+resumption, and the other, **coroprobe**, that allows a programmer to inject
+arbitrary code into a suspended coroutine for immediate execution (making it
+much easier to use for introspection).
 
 # Rationale
 
 When debugging complex coroutines - with many yield points and possibly rich
 state in local variables - sometimes one would like to inspect their state
-"from the outside", i.e., at a point where they are suspended.
+“from the outside”, i.e., at a point where they are suspended.
 
 A typical situation is that of a big, single-threaded, event\+coro system,
 where the coro happily enables/disables fileevents along its life, and the
 fileevents are one way to resume the coro. At a given point \(bug\), things get
 stalled, with the fileevents disabled. The obvious questions are:
 
- 1. "where" is the coro \(at which yield site\)? and
+ 1. “where” is the coro \(at which yield site\)? and
 
  2. what are the values of its local variables?
 
 Both these questions can be answered with the new **coroinject** primitive.
-The idea is to force a resumption of the coro along with an "immediate
-execution of extra code" directive, where the extra code says "dump the call
-stack with **info level** and **info frame**", or "dump the locals", etc.
+The idea is to force a resumption of the coro along with an “immediate
+execution of extra code” directive, where the extra code says “dump the call
+stack with **info level** and **info frame**”, or “dump the locals”, etc.
 
 Another use would be to inject "**return -code return**", as an alternative
 to renaming to \{\} for terminating the coro in a way that respects its
@@ -51,20 +55,36 @@ Note that the feature is similar to a proc-entry trace, but coroutine
 resumption is not currently a trace target.  Also, it is an intrinsically
 "one-shot" mechanism, which makes it a better fit for its debugging purposes.
 
-# Definition
+To make the use of **coroinject** simpler for the common introspection use
+case, an extra command, **coroprobe** is included. That runs the code
+immediately and produces the results immediately, including _making errors_ in
+the running of the code _not appear inside the coroutine;_ faults in debugging
+code should not cause failures in the code being debugged.
 
-The new command
+# Definition of coroinject
+
+The new command:
 
  > **coroinject** _coroname_ _cmd_ ?_arg1 ..._?
 
 prepends to the code to be executed on resumption of the currently suspended
 coroutine, _coroname_, the following code:
 
- >  _cmd_ _arg1..._ _resumearg_
+ >  _cmd_ _arg1..._ _yieldtype_ _resumearg_
 
-where _resumearg_ is the single argument passed to the resumption command
-_coroname_.  In turn, the result from the execution of _cmd_ will be seen
-by the coroutine's code as the result of **yield**.
+where _yieldtype_ is either **yield** or **yieldto**, depending on how the
+coroutine yielded (allowing generic injection handler commands to be used),
+and_resumearg_ is:
+
+ 1. the single argument passed to the resumption command _coroname_ when
+    **yield** is used by _coroname_. If there is no resumption argument,
+    _resumearg_ will be the empty string.
+ 
+ 2. the list of arguments passed to the resumption command _coroname_ when
+    **yieldto** is used by _coroname_.
+ 
+In turn, the result from the execution of _cmd_ will be seen by the
+coroutine's code as the result of **yield**/**yieldto**.
 
 Note that:
 
@@ -77,20 +97,85 @@ Note that:
     of _cmd_ to provide the result of **yield**, will allow the following
     style of fully transparent injection:
 
-		    proc probe {x y resumearg} {do things $x $y;return $resumearg}
-		    coroinject C probe foo bar
+            proc probe {x y type resumearg} {
+                do things $x $y
+                return $resumearg
+            }
+            coroinject C probe foo bar
+
+    However, probing is more simply done with **coroprobe**.
+
+# Definition of coroprobe
+
+ > **coroprobe** _coroname_ _cmd_ ?_arg1 ..._?
+
+runs the command _cmd_ (with the given arguments) _immediately_ in the
+currently suspended coroutine, _coroname_, and gives the results of that
+execution as the results of the **coroprobe** command. Errors in _cmd_ result
+in errors from **coroprobe**, and not errors in the coroutine, _coroname_; the
+**return** command cannot be used to make the coroutine terminate early
+either. After **coroprobe** has run, the state of the coroutine will be the
+same as before (assuming _cmd_ does not delete _coroname_ or alter any of its
+local variables); for example, if it was waiting for multiple arguments before
+(because it had used **yieldto**, it will continue to do so afterwards, and it
+will resume at the same point in the code as it would have if **coroprobe**
+had not be run.
+
+Unlike with **coroinject**, no extra arguments are appended to _cmd_ when it
+is executed beyond those suppled as part of the **coroprobe** call.
+
+This combination of features means that it is possible to use this command
+usefully with, say, **info frame** and **info level** to examine the state of
+the coroutine.
+
+        set f [coroprobe C info frame]
+        puts "coroutine C @$f: [coroprobe C info frame $f]"
+
+However, in general it is easier to put a more complex probe into a procedure
+or lambda term:
+
+        set vars [coroprobe C apply {{} {
+            lmap var [uplevel 1 info locals] {
+                upvar 1 $var val
+                string cat $var -> $val
+            }
+        }}]
+        puts "The vars of C are: $vars"
 
 # Naming
 
-Of course, the proposed **coroinject** is a placeholder for a suitable name. Alternatives that also make sense are: **::tcl::coroinject** and **interp coroinject**. Constructive bikeshedding welcome.
+Of course, the proposed **coroinject** is a placeholder for a suitable name
+(and similarly **coroprobe**). Alternatives that also make sense are:
+**::tcl::coroinject** and **interp coroinject**. Constructive bikeshedding
+welcome.
 
 # Reference Implementation
 
+See the `tip-383` branch.
+
+# Notes
+
 The current **::tcl::unsupported::inject** implements most of the
-functionality described here, minus the _resumearg_ passing.  It will be
-updated to include it if consensus gathers on this style.
+functionality described here, minus the _yieldtype_ and _resumearg_ passing.
+The _yieldtype_ value is determinable with **::tcl::unsupported::corotype**.
+
+**coroprobe** can be mostly implemented using **coroinject**, but not
+easily. In particular, the error handling is non-trivial and **info frame**
+will be able to tell the difference consistently.
+
+The **coroprobe** command is less general than **coroinject**, but is quite a
+bit easier to use by virtue of being immediate and able to pass errors out.
+However, there are use cases out there that would not be supported by
+**coroprobe**, such as the operations on [the ‘every’ wiki
+page](https://wiki.tcl-lang.org/page/every) that use
+**::tcl::unsupported::inject** to do nice early termination of the worker
+coroutines. Thus, having two commands is jusifiable. The unsupported version
+of this has problems with processing the resumption value, which isn't a
+problem when the resumption is done straight away (making its resumption value
+moot), but that in turn can have problems with knowing how to re-yield so as
+to not disrupt the coroutine, which is why the _yieldtype_ value is added (to
+_allow_ the injected code to yield correctly).
 
 # Copyright
 
 This document has been placed in the public domain.
-
